// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render a standard block link 1`] = `
.c1 {
  padding: 0.75rem 0;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-bottom: 0.25rem;
  display: block;
}

.c0:hover .c2,
.c2 .c0:focus {
  padding-bottom: 2px;
  border-bottom: 2px solid #FFFFFF;
}

<a
  className="c0 c1"
  href="https://www.bbc.com/"
>
  <span
    className="c2"
  >
    Some link text
  </span>
</a>
`;

exports[`Link should render an inline link after passing an inline prop 1`] = `
.c1 {
  padding: 0.75rem 0;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-bottom: 0.25rem;
  display: inline;
}

.c0:hover .c2,
.c2 .c0:focus {
  padding-bottom: 2px;
  border-bottom: 2px solid #FFFFFF;
}

<a
  className="c0 c1"
  href="https://www.bbc.com/"
>
  <span
    className="c2"
  >
    Some link text
  </span>
</a>
`;
